[package]
name = "dreamcore_image_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.8"
imageproc = "0.25.0"
include_dir = "0.7.4"
rand = "0.9.2"
ab_glyph = "0.2.32"
derive-new = "0.7.0"
num-traits = "0.2.19"
strum_macros = "0.27.2"
strum = "0.27.2"
thiserror = "2.0.17"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
pretty_env_logger = "0.5.0"
log = "0.4.28"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-macros = "2.6.0"
futures = "0.3.31"
lazy_static = "1.5.0"
serde_json = "1.0.145"
urlencoding = "2.1.3"